--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"env:pull:example": "dotenv-vault pull example .env.example",
 		"env:pull:development": "dotenv-vault pull development .env.development",
 		"env:pull:production": "dotenv-vault pull production .env.production",
-		"env:open": "dotenv-vault open"
+		"env:open": "dotenv-vault open",
+		"diag": "tsc --extendedDiagnostics",
+		"trace": "tsc --generateTrace ./trace && npx @typescript/analyze-trace trace"
 	},
 	"dependencies": {
 		"@sentry/react-native": "5.5.0",
@@ -70,6 +72,7 @@
 		"@types/react": "^18.2.21",
 		"@typescript-eslint/eslint-plugin": "^6.7.0",
 		"@typescript-eslint/parser": "^6.7.0",
+		"@typescript/analyze-trace": "^0.10.1",
 		"cspell": "^7.3.6",
 		"dotenv-vault": "^1.25.0",
 		"eslint": "^8.49.0",
