--- a/package.json
+++ b/package.json
@@ -58,9 +58,6 @@
 	"devDependencies": {
 		"@babel/core": "^7.22.19",
 		"@expo/config": "~8.1.2",
-		"@svgr/core": "^8.1.0",
-		"@svgr/plugin-jsx": "^8.1.0",
-		"@svgr/plugin-svgo": "^8.1.0",
 		"@testing-library/jest-native": "^5.4.3",
 		"@testing-library/react-native": "^12.3.0",
 		"@total-typescript/ts-reset": "^0.5.1",
@@ -88,7 +85,9 @@
 		"eslint-plugin-vitest": "^0.3.1",
 		"jest": "^29.7.0",
 		"jest-expo": "^49.0.0",
+		"node-html-parser": "^6.1.10",
 		"prettier": "^3.0.3",
+		"svgo": "^3.0.2",
 		"ts-jest": "^29.1.1",
 		"tsx": "^3.12.10",
 		"typescript": "^5.2.2"
