--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "1.18.2",
 		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.11",
+		"expo": "^49.0.13",
 		"expo-application": "~5.3.0",
 		"expo-av": "~13.4.1",
 		"expo-constants": "~14.4.2",
@@ -39,16 +39,16 @@
 		"expo-linear-gradient": "~12.3.0",
 		"expo-linking": "~5.0.2",
 		"expo-network": "~5.4.0",
-		"expo-router": "2.0.6",
+		"expo-router": "2.0.8",
 		"expo-secure-store": "~12.3.1",
 		"expo-status-bar": "~1.6.0",
 		"expo-system-ui": "~2.4.0",
-		"expo-updates": "^0.18.13",
+		"expo-updates": "^0.18.14",
 		"react": "18.2.0",
-		"react-native": "^0.72.4",
-		"react-native-gesture-handler": "^2.12.1",
-		"react-native-paper": "^5.10.4",
-		"react-native-paper-dates": "^0.19.0",
+		"react-native": "^0.72.5",
+		"react-native-gesture-handler": "~2.12.0",
+		"react-native-paper": "^5.10.6",
+		"react-native-paper-dates": "^0.19.7",
 		"react-native-reanimated": "~3.3.0",
 		"react-native-safe-area-context": "4.6.3",
 		"react-native-screens": "~3.22.0",
@@ -57,31 +57,31 @@
 		"zod": "^3.22.2"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.22.19",
+		"@babel/core": "^7.23.0",
 		"@expo/config": "~8.1.2",
 		"@testing-library/jest-native": "^5.4.3",
 		"@testing-library/react-native": "^12.3.0",
 		"@total-typescript/ts-reset": "^0.5.1",
 		"@types/babel__core": "^7.20.2",
-		"@types/eslint": "^8.44.2",
+		"@types/eslint": "^8.44.3",
 		"@types/jest": "^29.5.5",
-		"@types/node": "^20.6.2",
+		"@types/node": "^20.8.0",
 		"@types/prettier": "^3.0.0",
-		"@types/react": "^18.2.21",
-		"@typescript-eslint/eslint-plugin": "^6.7.0",
-		"@typescript-eslint/parser": "^6.7.0",
+		"@types/react": "^18.2.23",
+		"@typescript-eslint/eslint-plugin": "^6.7.3",
+		"@typescript-eslint/parser": "^6.7.3",
 		"@typescript/analyze-trace": "^0.10.1",
-		"cspell": "^7.3.6",
+		"cspell": "^7.3.7",
 		"dotenv-vault": "^1.25.0",
-		"eslint": "^8.49.0",
+		"eslint": "^8.50.0",
 		"eslint-config-prettier": "^9.0.0",
-		"eslint-import-resolver-typescript": "^3.6.0",
+		"eslint-import-resolver-typescript": "^3.6.1",
 		"eslint-plugin-import": "^2.28.1",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-jsx-expressions": "^1.3.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-testing-library": "^6.0.1",
+		"eslint-plugin-testing-library": "^6.0.2",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.3.1",
 		"jest": "^29.7.0",
@@ -90,7 +90,7 @@
 		"prettier": "^3.0.3",
 		"svgo": "^3.0.2",
 		"ts-jest": "^29.1.1",
-		"tsx": "^3.12.10",
+		"tsx": "^3.13.0",
 		"typescript": "^5.2.2"
 	},
 	"private": true
