--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
 	"dependencies": {
 		"@react-native-async-storage/async-storage": "1.18.2",
 		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.13",
-		"expo-application": "~5.3.0",
+		"expo": "^49.0.16",
+		"expo-application": "~5.3.1",
 		"expo-av": "~13.4.1",
 		"expo-constants": "~14.4.2",
 		"expo-device": "~5.4.0",
@@ -45,58 +45,58 @@
 		"expo-linear-gradient": "~12.3.0",
 		"expo-linking": "~5.0.2",
 		"expo-network": "~5.4.0",
-		"expo-router": "2.0.8",
+		"expo-router": "2.0.11",
 		"expo-secure-store": "~12.3.1",
 		"expo-status-bar": "~1.6.0",
 		"expo-system-ui": "~2.4.0",
-		"expo-updates": "^0.18.14",
+		"expo-updates": "^0.18.17",
 		"react": "18.2.0",
-		"react-native": "^0.72.5",
-		"react-native-gesture-handler": "~2.12.0",
-		"react-native-paper": "^5.10.6",
-		"react-native-paper-dates": "^0.19.7",
+		"react-native": "^0.72.6",
+		"react-native-gesture-handler": "~2.12.1",
+		"react-native-paper": "^5.11.1",
+		"react-native-paper-dates": "^0.19.8",
 		"react-native-reanimated": "~3.3.0",
 		"react-native-safe-area-context": "4.6.3",
-		"react-native-screens": "~3.22.0",
+		"react-native-screens": "~3.22.1",
 		"react-native-svg": "13.9.0",
-		"sentry-expo": "^7.0.1",
-		"zod": "^3.22.2"
+		"sentry-expo": "~7.0.1",
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.23.0",
+		"@babel/core": "^7.23.2",
 		"@expo/config": "~8.1.2",
 		"@testing-library/jest-native": "^5.4.3",
-		"@testing-library/react-native": "^12.3.0",
+		"@testing-library/react-native": "^12.3.2",
 		"@total-typescript/ts-reset": "^0.5.1",
-		"@types/babel__core": "^7.20.2",
-		"@types/eslint": "^8.44.3",
-		"@types/jest": "^29.5.5",
-		"@types/node": "^20.8.0",
+		"@types/babel__core": "^7.20.4",
+		"@types/eslint": "^8.44.7",
+		"@types/jest": "^29.5.7",
+		"@types/node": "^20.8.10",
 		"@types/prettier": "^3.0.0",
-		"@types/react": "^18.2.23",
-		"@typescript-eslint/eslint-plugin": "^6.7.3",
-		"@typescript-eslint/parser": "^6.7.3",
+		"@types/react": "^18.2.36",
+		"@typescript-eslint/eslint-plugin": "^6.10.0",
+		"@typescript-eslint/parser": "^6.10.0",
 		"@typescript/analyze-trace": "^0.10.1",
-		"cspell": "^7.3.7",
+		"cspell": "^7.3.9",
 		"dotenv-vault": "^1.25.0",
-		"eslint": "^8.50.0",
+		"eslint": "^8.53.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-import-resolver-typescript": "^3.6.1",
-		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-jsx-a11y": "^6.7.1",
+		"eslint-plugin-import": "^2.29.0",
+		"eslint-plugin-jsx-a11y": "^6.8.0",
 		"eslint-plugin-jsx-expressions": "^1.3.1",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-testing-library": "^6.0.2",
+		"eslint-plugin-testing-library": "^6.1.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
-		"eslint-plugin-vitest": "^0.3.1",
+		"eslint-plugin-vitest": "^0.3.9",
 		"jest": "^29.7.0",
 		"jest-expo": "^49.0.0",
-		"node-html-parser": "^6.1.10",
+		"node-html-parser": "^6.1.11",
 		"prettier": "^3.0.3",
 		"svgo": "^3.0.2",
 		"ts-jest": "^29.1.1",
-		"tsx": "^3.13.0",
+		"tsx": "^3.14.0",
 		"typescript": "^5.2.2"
 	}
 }
