--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
 		"**/node_modules": true,
 		"**/bower_components": true,
 		"**/*.code-search": true,
-		".yarn": true
+		".yarn/**/*": true,
+		"yarn.lock": true
 	}
 }
