--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
 		// modules
 		"module": "ESNext",
 		"moduleResolution": "Bundler",
+		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
 
 		// emit
