--- a/package.json
+++ b/package.json
@@ -34,37 +34,37 @@
 		"trace": "tsc --generateTrace ./trace && npx @typescript/analyze-trace trace"
 	},
 	"dependencies": {
-		"@react-native-async-storage/async-storage": "1.18.2",
-		"@sentry/react-native": "5.5.0",
-		"expo": "^49.0.16",
-		"expo-application": "~5.3.1",
-		"expo-av": "~13.4.1",
-		"expo-constants": "~14.4.2",
-		"expo-device": "~5.4.0",
-		"expo-font": "~11.4.0",
-		"expo-linear-gradient": "~12.3.0",
-		"expo-linking": "~5.0.2",
-		"expo-network": "~5.4.0",
-		"expo-router": "2.0.11",
-		"expo-secure-store": "~12.3.1",
-		"expo-status-bar": "~1.6.0",
-		"expo-system-ui": "~2.4.0",
-		"expo-updates": "^0.18.17",
+		"@react-native-async-storage/async-storage": "1.21.0",
+		"@sentry/react-native": "5.16.0",
+		"expo": "^50.0.0",
+		"expo-application": "~5.8.3",
+		"expo-av": "~13.10.3",
+		"expo-constants": "~15.4.5",
+		"expo-device": "~5.9.3",
+		"expo-font": "~11.10.2",
+		"expo-linear-gradient": "~12.7.0",
+		"expo-linking": "~6.2.2",
+		"expo-network": "~5.8.0",
+		"expo-router": "~3.4.4",
+		"expo-secure-store": "~12.8.1",
+		"expo-status-bar": "~1.11.1",
+		"expo-system-ui": "~2.9.3",
+		"expo-updates": "~0.24.8",
 		"react": "18.2.0",
-		"react-native": "^0.72.6",
-		"react-native-gesture-handler": "~2.12.1",
+		"react-native": "0.73.2",
+		"react-native-gesture-handler": "~2.14.0",
 		"react-native-paper": "^5.11.1",
 		"react-native-paper-dates": "^0.19.8",
-		"react-native-reanimated": "~3.3.0",
-		"react-native-safe-area-context": "4.6.3",
-		"react-native-screens": "~3.22.1",
-		"react-native-svg": "13.9.0",
+		"react-native-reanimated": "~3.6.0",
+		"react-native-safe-area-context": "4.8.2",
+		"react-native-screens": "~3.29.0",
+		"react-native-svg": "14.1.0",
 		"sentry-expo": "~7.0.1",
 		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.23.2",
-		"@expo/config": "~8.1.2",
+		"@expo/config": "~8.5.0",
 		"@testing-library/jest-native": "^5.4.3",
 		"@testing-library/react-native": "^12.3.2",
 		"@total-typescript/ts-reset": "^0.5.1",
@@ -73,7 +73,7 @@
 		"@types/jest": "^29.5.7",
 		"@types/node": "^20.8.10",
 		"@types/prettier": "^3.0.0",
-		"@types/react": "^18.2.36",
+		"@types/react": "~18.2.45",
 		"@typescript-eslint/eslint-plugin": "^6.10.0",
 		"@typescript-eslint/parser": "^6.10.0",
 		"@typescript/analyze-trace": "^0.10.1",
@@ -91,11 +91,11 @@
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.3.9",
 		"jest": "^29.7.0",
-		"jest-expo": "^49.0.0",
+		"jest-expo": "~50.0.1",
 		"node-html-parser": "^6.1.11",
 		"prettier": "^3.0.3",
 		"svgo": "^3.0.2",
 		"ts-jest": "^29.1.1",
-		"typescript": "^5.2.2"
+		"typescript": "^5.3.0"
 	}
 }
