--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
 		"**/bower_components": true,
 		"**/*.code-search": true,
 		".yarn/**/*": true,
-		"yarn.lock": true
+		"yarn.lock": true,
+		".expo/**/*": true
 	}
 }
