--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
 		"eslint-plugin-only-warn": "^1.1.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"eslint-plugin-sort-keys-plus": "^1.4.0",
 		"eslint-plugin-testing-library": "^6.2.0",
 		"eslint-plugin-unused-imports": "^3.0.0",
 		"eslint-plugin-vitest": "^0.3.21",
@@ -95,5 +97,6 @@
 		"svgo": "^3.2.0",
 		"ts-jest": "^29.1.2",
 		"typescript": "^5.3.3"
-	}
+	},
+	"packageManager": "pnpm@8.15.5+sha256.4b4efa12490e5055d59b9b9fc9438b7d581a6b7af3b5675eb5c5f447cee1a589"
 }
