--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,6 @@
 		"noFallthroughCasesInSwitch": true,
 		"noImplicitAny": true,
 		"noImplicitOverride": true,
-		"noImplicitReturns": true,
 		"noImplicitThis": true,
 		"noUncheckedIndexedAccess": true,
 		"strictFunctionTypes": true,
@@ -20,7 +19,7 @@
 		"noUnusedParameters": false,
 
 		// modules
-		"module": "ESNext",
+		"module": "Preserve",
 		"moduleResolution": "Bundler",
 		"allowImportingTsExtensions": true,
 		"resolveJsonModule": true,
@@ -52,7 +51,6 @@
 		// completeness
 		"skipLibCheck": true
 	},
-	"exclude": ["node_modules", "cache", "coverage"],
 	"include": [
 		"**/*.ts",
 		"**/*.tsx",
@@ -62,5 +60,6 @@
 		".expo/types/**/*.ts",
 		"expo-env.d.ts",
 		"metro.config.js"
-	]
+	],
+	"exclude": ["node_modules", "cache", "coverage"]
 }
