--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"lint": "eslint . --max-warnings=0 --fix && pnpm format && pnpm spellcheck",
 		"format": "prettier --write --log-level silent .",
 		"spellcheck": "cspell . --quiet",
+		"debug:logs": "pnpm dlx react-native logs-android",
 		"env:new": "dotenv-vault new",
 		"env:login": "dotenv-vault login",
 		"env:push": "pnpm env:push:development && pnpm env:push:production",
